--- a/server.yaml
+++ b/server.yaml
@@ -18,6 +18,24 @@ packages:
   - unattended-upgrades
   - nginx
 
+write_files:
+  - path: /etc/nginx/sites-available/oilmud.io
+    content: |
+      server {
+        listen 80;
+        server_name oilmud.io;
+
+        location / {
+          proxy_pass http://127.0.0.1:8008;
+          proxy_http_version 1.1;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection "upgrade";
+          proxy_set_header Host $host;
+          proxy_cache_bypass $http_upgrade;
+        }
+      }
+
 runcmd:
   - sudo ufw --force enable
   - sudo ufw allow OpenSSH
