--- a/server.yaml
+++ b/server.yaml
@@ -19,6 +19,20 @@ packages:
   - nginx
 
 write_files:
+  - path: /etc/nginx/nginx.conf
+    content: |
+
+      stream {
+              log_format basic '$remote_addr [$time_local] '
+                 '$protocol $status $bytes_sent $bytes_received '
+                 '$session_time';
+
+              access_log /var/log/nginx/stream.access.log;
+              error_log /var/log/nginx/stream.error.log;
+              include /etc/nginx/streams-enabled/*;
+      }
+    defer: true
+    append: true
   - path: /etc/nginx/sites-available/oilmud.io
     content: |
       server {
@@ -35,15 +49,14 @@ write_files:
           proxy_cache_bypass $http_upgrade;
         }
       }
-  - path: /etc/nginx/sites-available/play.oilmud.io
+    defer: true
+  - path: /etc/nginx/streams-available/play.oilmud.io
     content: |
-      stream {
-        server {
-          listen 8020;
-          server_name play.oilmud.io;
-          proxy_pass 127.0.0.1:8080; 
-        }
+      server {
+        listen 8020;
+        proxy_pass 127.0.0.1:8080; 
       }
+    defer: true
 
 runcmd:
   - sudo ufw --force enable
@@ -58,9 +71,10 @@ runcmd:
   - apt-get install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin
   - systemctl enable docker
   - systemctl start docker
+  - rm /etc/nginx/sites-enabled/default
+  - mkdir /etc/nginx/streams-enabled
   - ln -s /etc/nginx/sites-available/oilmud.io /etc/nginx/sites-enabled/
-  - ln -s /etc/nginx/sites-available/play.oilmud.io /etc/nginx/sites-enabled/
-  - rm /etc/nginx/sites-enabled/default 
+  - ln -s /etc/nginx/streams-available/play.oilmud.io /etc/nginx/streams-enabled/
   - systemctl restart nginx
 
 power_state:
