--- a/server.yaml
+++ b/server.yaml
@@ -27,7 +27,7 @@ write_files:
                  '$protocol $status $bytes_sent $bytes_received '
                  '$session_time';
 
-              access_log /var/log/nginx/stream.access.log;
+              access_log /var/log/nginx/stream.access.log basic;
               error_log /var/log/nginx/stream.error.log;
               include /etc/nginx/streams-enabled/*;
       }
