Try initializing certbot

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -43,8 +43,8 @@ http {
         # Logging Settings
         ##
 
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
+        access_log /var/log/nginx/http.access.log;
+        error_log /var/log/nginx/http.error.log;
 
         ##
         # Gzip Settings
@@ -88,3 +88,8 @@ http {
 #               proxy      on;
 #       }
 #}
+stream {
+        access_log /var/log/nginx/stream.access.log;
+        /var/log/nginx/stream.error.log;
+        include /etc/nginx/streams-enabled/*;
+}
