--- a/server.yaml
+++ b/server.yaml
@@ -50,7 +50,24 @@ write_files:
         }
       }
     defer: true
-  - path: /etc/nginx/streams-available/play.oilmud.io
+  - path: /etc/nginx/sites-available/play.oilmud.io
+    content: |
+      server {
+        listen 80;
+        server_name play.oilmud.io;
+        
+        location / {
+          proxy_pass http://127.0.0.1:8089;
+          proxy_http_version 1.1;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection "upgrade";
+          proxy_set_header Host $host;
+          proxy_cache_bypass $http_upgrade;
+        }
+      }
+    defer: true
+  - path: /etc/nginx/streams-available/oilmud.io
     content: |
       server {
         listen 8020;
@@ -74,7 +91,8 @@ runcmd:
   - rm /etc/nginx/sites-enabled/default
   - mkdir /etc/nginx/streams-enabled
   - ln -s /etc/nginx/sites-available/oilmud.io /etc/nginx/sites-enabled/
-  - ln -s /etc/nginx/streams-available/play.oilmud.io /etc/nginx/streams-enabled/
+  - ln -s /etc/nginx/sites-available/play.oilmud.io /etc/nginx/sites-enabled/
+  - ln -s /etc/nginx/streams-available/oilmud.io /etc/nginx/streams-enabled/
   - systemctl restart nginx
   - sudo snap install --classic certbot
   - sudo ln -s /snap/bin/certbot /usr/bin/certbot
