--- a/server.yaml
+++ b/server.yaml
@@ -69,19 +69,19 @@ write_files:
     defer: true
   - path: /etc/nginx/streams-available/oilmud.io
     content: |
-      server {
-        listen 8020 ssl;
-        proxy_pass 127.0.0.1:8080;
-
-        ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers    HIGH:!aNULL:!MD5;
-
-        ssl_certificate /etc/letsencrypt/live/oilmud.io/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/oilmud.io/privkey.pem;
-
-        ssl_handshake_timeout 10s;
-        ssl_session_cache shared:SSL:1m;
-      }
+      #server {
+      #  listen 8020 ssl;
+      #  proxy_pass 127.0.0.1:8080;
+      #
+      #  ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+      #  ssl_ciphers    HIGH:!aNULL:!MD5;
+      #
+      #  ssl_certificate /etc/letsencrypt/live/oilmud.io/fullchain.pem;
+      #  ssl_certificate_key /etc/letsencrypt/live/oilmud.io/privkey.pem;
+      #
+      #  ssl_handshake_timeout 10s;
+      #  ssl_session_cache shared:SSL:1m;
+      #}
 
       server {
         listen 8030;
@@ -111,6 +111,8 @@ runcmd:
   - sudo snap install --classic certbot
   - sudo ln -s /snap/bin/certbot /usr/bin/certbot
   - sudo certbot --nginx -n -d oilmud.io -d www.oilmud.io -d play.oilmud.io --email after.alec@gmail.com --agree-tos --redirect --hsts
+  - sed -i 's/^#//' /etc/nginx/streams-available/oilmud.io
+  - systemctl restart nginx
 
 power_state:
   delay: "+2"
